# killallgit

./: .gitignore  CLAUDE.md  Cargo.toml  KillAllGit.uproject  LICENSE  PLAN.md  Taskfile.yml
.github/workflows/: ci.yml
.task/checksum/: build
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Content/Game/: Lvl_BasicMap.umap
Content/Game/BluePrints/: BP_GameLevelCharacter.uasset  BP_GameLevelGameMode.uasset  BP_GameLevelPlayerController.uasset
Content/Game/Proceedural/: BP_MasterRoom.uasset  BP_RoomGenerator.uasset
Content/MainMenu/: Lvl_MainMenu.umap
Content/MainMenu/Blueprints/: BP_MainMenuGameMode.uasset  WBP_GameDataDebug.uasset  WBP_MainMenu.uasset  WBP_MenuButton.uasset
Content/Queries/: GetRepository.graphql
Content/UI/: WBP_InitOverlay.uasset
Source/: KillAllGit.Target.cs  KillAllGitEditor.Target.cs
Source/KillAllGit/: KillAllGit.Build.cs  KillAllGit.cpp  KillAllGit.h  KillAllGitCharacter.cpp  KillAllGitCharacter.h  KillAllGitGameMode.cpp  KillAllGitGameMode.h  KillAllGitPlayerController.cpp  KillAllGitPlayerController.h
Source/KillAllGit/GameInit/: GameInitPipeline.cpp  GameInitPipeline.h  GameInitSubsystem.cpp  GameInitSubsystem.h
Source/KillAllGit/GameLevels/: GameLevelCharacter.cpp  GameLevelCharacter.h  GameLevelPlayerController.cpp  GameLevelPlayerController.h
Source/KillAllGit/GitHub/: GitHubAPIClient.cpp  GitHubAPIClient.h  GitHubAuth.cpp  (+7 more)
docs/: architecture.md  editor-tasks.md
docs/specs/: game-initialization.md  github-data-layer.md  main-menu-save-system.md
src/: main.rs
tests/: integration_test.rs
(+53 files in other folders)
