[package]
name = "killallgit-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "CLI tool for managing git worktrees and cleaning up branches"
repository = "https://github.com/killallgit/killallgit"

[[bin]]
name = "killallgit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
anyhow = "1.0"
regex = "1"
serde_json = "1.0"
